--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   flutter_svg: ^2.0.10+1
   http: 
   dio_logging_interceptor:
   dio:
   color_log: ^0.0.6
+  intl:
+  geolocator: ^11.0.0
+  geocoding: ^2.1.1
+  connectivity_plus: ^5.0.2
+  restart_app: ^1.2.1
+  android_alarm_manager_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
